--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <link rel="icon" type="image/png" href="ico.png">
+    <link rel="icon" type="image/png" href="d.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spectra</title>
+    <title>Spectra2k19</title>
     <link rel="stylesheet" href="css_index.css">
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
 <body>
 
     <div class="box" id="login_div">
-        <img src="ico.png"><br>
+        <img src="d.png" style="width: 150px;height: 150px;" ><br>
         <label class="Spectra">Spectra</label>
         <input type="email" placeholder="Email" id="email_field">
         <input type="password" placeholder="Password" id="password_field">
@@ -28,14 +28,13 @@
 
         <div class="hero-image">
             <div class="hero-text">
-                <img src="ico_white.png"><br>
-                <label style="font-size:50px">Spectra</label>
+
             </div>
         </div>
 
         <center>
             <div id="logo" style="display: none;">
-                <img src="ico.png"><br>
+                <img src="d.png"><br>
                 <label>Spectra</label>
             </div>
         </center>
