--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="hero-image">
             <div class="hero-text">
-
+            	Spectra
             </div>
         </div>
 
