--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <center>
             <p id="demo">count</p>
         </center>
+        <center>
+            <p id="demo2">count</p>
+        </center>
 
         <center>
             <div style="height: 300px;overflow: auto;">
