--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Spectra2k19</title>
     <link rel="stylesheet" href="css_index.css">
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -57,10 +58,15 @@
         </center>
 
         <center>
-            <p id="demo">count</p>
-        </center>
-        <center>
-            <p id="demo2">count</p>
+        	<table>
+        		<tr>
+        			<td id="t_count">Ticket count You Sold:</td>
+        			<td id="t_count"><p id="demo">count</p></td>
+        			<td id="emphty"></td>
+        			<td id="t_count">Total Tickets Sold :</td>
+        			<td id="t_count"><p id="demo2">count</p></td>
+        		</tr>
+        	</table>
         </center>
 
         <center>
