--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <center>
         	<table>
         		<tr>
-        			<td id="t_count">Ticket count You Sold:</td>
+        			<td id="t_count">ඔයා විකුණපු ගාන :</td>
         			<td id="t_count"><p id="demo">count</p></td>
         			<td id="emphty"></td>
-        			<td id="t_count">Total Tickets Sold :</td>
+        			<td id="t_count">ඔක්කොම විකුණපු ගාන :</td>
         			<td id="t_count"><p id="demo2">count</p></td>
         		</tr>
         	</table>
