--- a/index.html
+++ b/index.html
@@ -988,8 +988,8 @@
 
         <div id="Sell_a_ticket" class="modal">
             <div class="modal-content animate">
-                <div class="box">
-                    <label>Sell a ticket</label>
+                <div class="box" style="background-color: rgba(0,0,0,0.9);">
+                    <label style="color: white; letter-spacing: 2px;padding: 14px 40px;">Sell a ticket</label>
                     <input type="number" placeholder="Ticket NO" id="ticket_no" onclick="clr_err()">
                     <input type="number" placeholder="NSBM Id" id="nsbm_id" onclick="clr_err()">
                     <input type="text" placeholder="Name" id="name" onclick="clr_err()">
