--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </center>
 
         <center>
-            <input type="text" id="myInput" onkeyup="searchHalls()" placeholder="Search" style="margin: 20px;display: none;" >
+            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for tickect number.." title="Type a number">
         </center>
 
         <center>
