--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </center>
 
         <center>
-            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for tickect number.." title="Type a number">
+            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for tickect number.." >
         </center>
 
         <center>
