--- a/hosting/public/index.html
+++ b/hosting/public/index.html
@@ -61,10 +61,10 @@
         	<table>
         		<tr>
         			<td id="t_count">ඔයා විකුණපු ගාන :</td>
-        			<td id="t_count"><p id="demo">count</p></td>
+        			<td id="t_count"><p id="demo">0</p></td>
         			<td id="emphty"></td>
         			<td id="t_count">ඔක්කොම විකුණපු ගාන :</td>
-        			<td id="t_count"><p id="demo2">count</p></td>
+        			<td id="t_count"><p id="demo2">0</p></td>
         		</tr>
         	</table>
         </center>
